--- a/Week01_200126/first.html
+++ b/Week01_200126/first.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Elements, Attributes, Head and Body</title>
 </head>
 <body>
 <h1>first line</h1>
 <h6>second line</h6>
 <a href="www.google.co.in">goggle</a>
+<p>hii i am merin joys</p>
+<a href="https://www.google.co.in">Google</a>
+<p>
+    Lorem ipsum dolor sit, <strong>hii</strong> amet consectetur adipisicing elit. Ipsa dolore error autem tempore dolorum quod aspernatur quibusdam iste repudiandae quo voluptatem possimus nihil dolor, <em>hola</em> saepe est esse debitis facere sapiente!
+</p>
 </body>
 </html>
